2008-12-12  Philip Withnall  <philip@tecnocode.co.uk>

	* browser-plugin/test-glow-button.c (main):
	* src/plugins/gromit/totem-gromit.c (totem_gromit_clear):
	* src/plugins/totem-plugins-engine.c (totem_plugins_engine_init),
	(totem_plugins_engine_shutdown):
	* src/plugins/totem-python-module.c (totem_python_shutdown):
	* src/test-properties-page.c (main): Use g_timeout_add_seconds
	instead of g_timeout_add where possible to allow for event grouping.
	(Closes: #564073)

2008-12-12  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_new): Don't read visuals settings
	from GConf, that's the job of the front-end

2008-12-12  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_motion_notify): Don't eat motion
	notify events, the xine-lib backend never did, and that's
	unneeded

2008-12-11  Philip Withnall  <philip@tecnocode.co.uk>

	* src/eggdesktopfile.c (set_startup_notification_timeout):
	Update libegg files from trunk libegg.

2008-12-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-indexer.c (main): Add --no-limit
	option to the indexer, as it exists in the thumbnailer

2008-12-11  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_new): Don't auto-resize by default

2008-12-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am:
	* src/Makefile.am:
	* src/backend/Makefile.am: Remove NVTV_{LIBS,CFLAGS} from
	the makefiles

2008-12-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_callback_connect): Fix the scrollwheel
	not working on the fullscreen seekbar (Closes: #563894)

2008-12-11  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/properties/bacon-video-widget-properties.c
	(bacon_video_widget_properties_from_metadata): Fix warnings
	playing back video from
	http://bugzilla.gnome.org/show_bug.cgi?id=564053

2008-12-10  Bastien Nocera  <hadess@hadess.net>
