@@ -1,3 +1,10 @@
+2008-12-15  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* src/totem-video-thumbnailer.c (scale_pixbuf), (save_pixbuf),
+	(cairo_surface_to_pixbuf), (create_gallery), (main): Add an option
+	to totem-video-thumbnailer to create galleries of screenshots from
+	videos. (Helps: #561088)
+
 2008-12-12  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* browser-plugin/test-glow-button.c (main):
